# activity-browser

./: .git-blame-ignore-revs  .gitignore  .hgignore  .travis.yml  AUTHORS.txt  CHANGELOG.md  CHANGES.txt  CONTRIBUTING.md  COPYRIGHT  LICENSE.txt  MANIFEST.in  Makefile  README.md  activitybrowser.py  appveyor.yml  browser_settings.py  browser_utils.py  bw2qtUI.py  compatible_ei_versions.txt  linkedmetaprocess.py  lmp.py  meta.yaml  metaprocess.py  mp_data_format.py  mpcreator.py  mpwidget.py  patched-environment.yml  process.py  processSubsystem.py  pssBuilder.py  pssCreator.py  pssWidget.py  pss_data_format.py  pyinstaller.spec  pyproject.toml  pytest.ini  reformat.py  requirements.txt  ruff.toml  run-ab-travis.py  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: beta_report.yml  bug_report.md  bug_report.yml  bug_report2.yml  config.yml  feature-request.md  feature-request.yml  feature_request.yml  other.md  something_else.yml
.github/conda-envs/: build.yml  test.yml
.github/dev-recipe/: meta.yaml
.github/scripts/: update_wiki.sh
.github/workflows/: README.md  build-executable.yml  comment-milestoned-issues.yaml  deploy.yaml  install-canary.yaml  just-release.yaml  main-pip.yaml  main.yaml  manual_update_wiki.yml  python-package-deploy.yml  release.yaml  request-review-instructions.yaml  ruff.yaml  test.yaml  testing.yaml
AB installer/: ActivityBrowser.py  CreateABTarbal.bat  ab_uninstaller.py  v1.iss
ActivityBrowserInstaller/: CHANGELOG.md  CreateABTarbal.bat  MakeExeFiles.bat  README.md  createApp.py
ActivityBrowserInstaller/Combined/: ActivityBrowserInstallerConfig.iss  MakeExeFiles.bat  createApp.py
ActivityBrowserInstaller/MacOSInstaller/: installABEnvironMent.sh  installABEnvironment.py  openActivityBrowser.py  openActivityBrowser.sh
ActivityBrowserInstaller/PythonScript/: ActivityBrowser Updater.py  ActivityBrowser.py  ab_installer.py  ab_uninstaller.py  openActivityBrowser.sh
ActivityBrowserInstaller/WindowsInstaller/: ActivityBrowserInstallerConfig.iss  MakeExeFiles.bat  README.md
HTML/: dagre_graph.html  dagre_graph_path.html  force_directed_graph.html  tree.html  tree_vertical.html
HTML/dagre/: dagre.js
MetaProcessDatabases/: example.pickle
Multi-LCA/: my_activities.pickle  my_methods.pickle  test.xlsx
Tests/: test_lmp.py  transport_example_CC.pickle
WindowsInstaller/: .gitignore  pytest.ini
WindowsInstaller/AB installer/: MakeExeFiles.bat  ab_uninstaller.spec  v1.iss
WindowsInstaller/tests/: pytest.ini  test_import_wizard.py  test_parameters.py
activity_browser/: README.md  __init__.py  __main__.py  application.py  info.py  loader.py  logger.py  plugin.py  settings.py  signals.py  utils.py
activity_browser/actions/: __init__.py  activity_delete.py  activity_duplicate.py  activity_duplicate_to_db.py  activity_duplicate_to_loc.py  activity_graph.py  activity_new.py  activity_open.py  activity_relink.py  base.py  biosphere_update.py  cs_delete.py  cs_duplicate.py  cs_new.py  cs_rename.py  database_delete.py  database_duplicate.py  database_export.py  database_import.py  database_new.py  database_relink.py  default_install.py  metadatastore_open.py  migrations_install.py  parameter_new.py  parameter_new_automatic.py  parameter_rename.py  plugin_wizard_open.py  pyside_upgrade.py  settings_wizard_open.py
activity_browser/app/: README.md  __init__.py  application.py  controller.py  main.py  main_window.py  menu_bar.py  settings.py  signalling.py  signals.py
activity_browser/brightway/: __init__.py  patching.py
activity_browser/bwutils/: README.md  __init__.py  calculation_setup.py  calculations.py  characterization_factors.py  commontasks.py  contribution_labels.py  data.py  elementary_flows.py  errors.py  export_names.py  exporters.py  filesystem.py  importers.py  lcia_overview.py  manager.py  metadata.py  montecarlo.py  montecarlo_matrix_utils_patch.py  multilca.py  pedigree.py  searchengine.py  sensitivity_analysis.py  settings.py  strategies.py  uncertainty.py  utils.py
activity_browser/controllers/: __init__.py  activity.py  base.py  calculation_setup.py  database.py  exchange.py  impact_category.py  parameter.py  plugin.py  project.py  utilities.py  utils.py
activity_browser/layouts/: __init__.py  main.py  main_window.py  menu_bar.py
activity_browser/mod/: README.md  __init__.py  patching.py
activity_browser/static/: README.md  activity_graph.html  navigator.html  sankey_navigator.html  spinner.html  tree_navigator.html
activity_browser_beta/: README.md  __init__.py
ci/: changelog-configuration.json  conda_upload.sh  environment-test.yml  meta.yaml
docs/: Gemfile  README.md  _config.yml  beta.md  index.md
lca_activity_browser/: __init__.py  activitybrowser.py  browser_settings.py  browser_utils.py  linkedmetaprocess.py  metaprocess.py  mp_data_format.py  mpcreator.py  mpwidget.py  style.py
old_tests/: test_calculation_setup.py  test_import_wizard.py  test_widgets.py
recipe/: README.md  meta.yaml
recipe-25/: meta.yaml
tests/: README.md  ab_installer_test.py  ab_test.py  ab_uninstaller_test.py  ab_updater_test.py  conftest.py  minimal_test.py  pytest.ini  test_activity_edit_elementary_flow.py  test_activity_new_elementary_flow.py  test_add_default_data.py  test_calculation_setup.py  test_calculation_setup_active.py  test_calculation_setup_duplicate_fu.py  test_contribution_normalize.py  test_database_roundtrip.py  test_delete_elementary_flow.py  test_exchange_labels.py  test_export_names.py  test_export_wizard.py  test_graph_traversal.py  test_gsa.py  test_import_error.py  test_import_wizard.py  test_lcia_overview.py  test_lmp.py  test_mds_cross_database.py  test_metadata_reload_after_write.py  test_monte_carlo_uncertainty.py  test_parameter_montecarlo.py  test_parameters.py  test_plot_legend_tooltip.py  test_presample_scenarios.py  test_project_migrate25.py  test_projects.py  test_reference_flow_labels.py  test_search.py  test_settings.py  test_settings_wizard.py  test_superstructure_database_relink.py  (+5 more)
tests_old/: conftest.py
travis-recipe/: meta.yaml
(+968 files in other folders)
