[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "activity_browser"
authors = [
    { name = "Bernhard Steubing", email = "b.steubing@cml.leidenuniv.nl" }
]
maintainers = []
description = "A graphical user interface for brightway2"
readme = "README.md"
dynamic = ["version", "license"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.9"
dependencies = [
    "arrow",
    "networkx",
    "numpy",
    "pandas",
    "pint",
    "pyperclip",
    "pyside2",
    "salib",
    "seaborn",
    "ecoinvent_interface",
    "bw_graph_tools",
    "bw_simapro_csv",
    "bw2analyzer",
    "bw2io",
    "bw2calc>=0.0.dev0",
    "bw2data>=0.0.dev0",
    "bw2io>=0.0.dev0"
]


[project.urls]
source = "https://github.com/LCA-ActivityBrowser/activity-browser"
homepage = "https://github.com/LCA-ActivityBrowser/activity-browser"
tracker = "https://github.com/LCA-ActivityBrowser/activity-browser/issues"

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-env",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-env",
    "setuptools",
]

[project.scripts]
"activity-browser" = "activity_browser:run_activity_browser"

[tool.pytest.ini_options]
addopts = "--cov activity_browser --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests"]
qt_api = "pyside2"
log_cli = true

[tool.pytest_env]
AB_SIMPLE_CONSOLE = "1"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true