[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "activity_browser"
authors = [
    { name = "Bernhard Steubing", email = "b.steubing@cml.leidenuniv.nl" }
]
maintainers = []
description = "A graphical user interface for brightway2"
readme = "README.md"
dynamic = ["version", "license"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.10, <=3.13"
dependencies = [
    "arrow",
    "bw2analyzer>=0.11.5",
    "bw2calc>=2.0",
    "bw2data>=4.1",
    "bw2parameters>=1.1",
    "bw2io>=0.9.3",
    "bw_graph_tools>=0.5",
    "bw_processing>=1.0",
    "bw_simapro_csv >=0.2.6",
    "ecoinvent_interface",
    "matrix_utils>=0.5",
    "bw-functional==0b82",
    "networkx",
    "numpy>=1.23.5,<2",
    "pandas>=2.2.1",
    "pint<=0.21",
    "py7zr==0.22.0",
    "pyperclip",
    "pyside6",
    "pypardiso ; platform_system == 'Windows'",
    "pyprind",
    "qtpy",
    "salib>=1.4",
    "seaborn",
]


[project.urls]
source = "https://github.com/LCA-ActivityBrowser/activity-browser"
homepage = "https://github.com/LCA-ActivityBrowser/activity-browser"
tracker = "https://github.com/LCA-ActivityBrowser/activity-browser/issues"

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-qt",
    "pytest-mock",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-qt",
    "pytest-mock",
    "setuptools",
]

[project.scripts]
"activity-browser" = "activity_browser:run_activity_browser"

[tool.pytest.ini_options]
addopts = "--cov activity_browser --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests"]
log_cli = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
